# SkinSegmentation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: skin_segm.cpp  skin_segm.cu  skin_segm.h  weights.h
